css fix word-wrap on command result

--- a/assets/embed/public/css/styles.css
+++ b/assets/embed/public/css/styles.css
@@ -566,6 +566,7 @@ header p i {
     transition: .1s ease all;
     visibility: hidden;
     opacity: 0;
+    word-wrap: break-word;
 }
 
 #search.active div i,
